<resources>
    <string name="app_name">NeoStoreApp</string>
    <string name="underline_key">I agree the
        <u>terms and conditions</u>
    </string>
    <string name="neostore">NeoSTORE</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="neostore_reg">NeoSTORE</string>
    <string name="username_reg">Username</string>
    <string name="password_reg">Password</string>
    <string name="login_forgotpassword">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>

    <string name="app_name1">Kotlin - Navigation Drawer Example</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Password">current password</string>

</resources>
