<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/main_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/red"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_neostore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/neostore"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            style="@style/style_EditText"
            android:background="@drawable/shape_rectangle"
            android:drawableLeft="@drawable/username_icon"
            android:hint="@string/email"
            android:textSize="30sp"
            android:layout_marginTop="45dp"
        />

              <EditText
            android:id="@+id/et_password"
            style="@style/style_EditText"
            android:background="@drawable/shape_rectangle"
            android:drawableLeft="@drawable/password_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="30sp"
            android:layout_marginTop="18dp"/>
        <Button
                android:id="@+id/btn_login"
                style="@style/style_button"
                android:background="@drawable/rounded_btn"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:layout_marginTop="38dp"/>
        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal"
            android:layout_marginTop="21dp"
        />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_new_accnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginBottom="@dimen/margin_bottom_small"
                android:gravity="left"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="@string/dont_have_an_account"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <ImageButton
                         android:id="@+id/btn_plus"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_add"
                         android:backgroundTint="@color/red"
                         android:layout_marginLeft="70dp"
                         android:layout_marginBottom="20dp"
            />

        </LinearLayout>
    </LinearLayout>

    </ScrollView>
</RelativeLayout>