<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/red"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:id="@+id/toolbar"
               app:title="@string/register"
               app:titleTextColor="@color/white"
               app:titleMarginStart="150dp"
               app:titleMarginEnd="100dp"
        />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_right_medium"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/neostore"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_firstName"
            style="@style/style_EditText"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:drawableLeft="@drawable/username_icon"
            android:text="First Name"

            />

        <EditText
            android:id="@+id/et_lastName"
            style="@style/style_EditText"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:drawableLeft="@drawable/username_icon"
            android:text="Last Name"
            android:textAllCaps="false"
             />

         <EditText
            android:id="@+id/et_email"
            style="@style/style_EditText"
            android:background="@drawable/shape"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="20dp"
            android:text="@string/email"
            android:layout_marginTop="13dp"

         />

          <EditText
            android:id="@+id/et_password"
            style="@style/style_EditText"
            android:background="@drawable/shape"
            android:drawableLeft="@drawable/cpassword_icon"
            android:text="Password"
            android:layout_marginTop="13dp"


          />

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/style_EditText"
            android:background="@drawable/shape"
            android:drawableLeft="@drawable/password_icon"
            android:text="@string/confirm_password"
            android:layout_marginTop="13dp"


        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:gravity="left"
                android:text="Gender"
                android:textColor="@color/white"
                android:textStyle="normal" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="55dp"
                    android:text="Male"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="normal" />
            </RadioGroup>
        </LinearLayout>


        <EditText
            android:id="@+id/et_phn_no"
            style="@style/style_EditText"
            android:background="@drawable/shape"
            android:drawableLeft="@drawable/cellphone"
            android:text="Phone Number"
            android:layout_marginTop="10dp"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:drawableLeft="@drawable/checked_icon"
            android:text="@string/underline_key"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

         <Button
            android:id="@+id/btn_register"
            style="@style/style_button"
            android:background="@drawable/rounded_btn"
            android:text="@string/register"
            android:textColor="@color/red"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

</RelativeLayout>